--- a/Example.Rmd
+++ b/Example.Rmd
@@ -32,7 +32,7 @@ names(color_complete) = phenotype_complete
 
 fig.prefix.complete = './complete'
 
-r_vec = c(30,40,50)
+r_vec = c(20,100)
 
 
 phenotype_simple = list(Macrophage = c("CD163+PDL1-","CD163+PDL1+"),
@@ -85,7 +85,7 @@ plotter_alltypes = T
 plotter = list(plotter_sample, plotter_quadrat, plotter_alltypes)
 
 # Select spatial statistics, or NULL then all inbuild spatial statistics are selected
-selected_spatstat_statistics = list('F') # 'ALL', NULL, list('Gdot', 'K')
+selected_spatstat_statistics = 'ALL' # 'ALL', NULL, list('Gdot', 'K')
 
 # debug
 
@@ -106,9 +106,9 @@ for (file in extreme){
                       r_vec = r_vec, spatstat_statistics = selected_spatstat_statistics)
 }
 
-# saveRDS(outputs_auto, file = 'feature_matrix_output.RDS')
+saveRDS(outputs_auto, file = 'feature_matrix_output.RDS')
 M = feature_extract(outputs = outputs_auto)
-# write.csv(x = M,file = file.path(fig.prefix.simple, 'feature_matrix.csv'))
+write.csv(x = M,file = file.path(fig.prefix.simple, 'feature_matrix.csv'))
 ```
 
 
@@ -346,6 +346,44 @@ sixes = df_and_NAs[sixes_names <- 'HO105-061_[11807,41972]',str_subset(colnames(
 # samples with 26 NA's have a count of 1 for a phenotype
 
 # sum(feature_matrix_simple_22 == feature_matrix_simple_26,na.rm = TRUE)+sum(is.na(feature_matrix_simple_22)) = 1186*1686 so both matrices are the same.
+
+```
+
+```{r clinical vs prediction data 30nd Jun}
+source('spatstat_vectra.R')
+
+# import simplified matrix
+
+feature_matrix_simple_30 = readRDS(path.expand('~/Studie/Thesis - Local/Extracted_Features_30thJun.RDS'))
+
+NAs_per_sample_all_cols = rowSums((is.na(feature_matrix_simple_30)))
+# table(NAs_per_sample_all_cols)
+# NAs_per_sample_all_cols
+#   0   4   8  12  16  20  24  25  26  28  29  30  32  36  37  38  40  41  42  43  44  48  52  54  56  58  60  62  64  66 669 678 684 687 690 693 
+# 248  56  23  60 154 106  98   1   1 108   1   1 152  77   1   3  48   2   1   1  14   4   2   1   2   1   2   2   1   1   4   3   1   2   3   1 
+# Quite a few NA's because of J-statistic
+df_and_NAs_all_colls = cbind(NAs_per_sample_all_cols,feature_matrix_simple_30)
+
+
+
+cols_without_J = str_subset(colnames(feature_matrix_simple_30),'J_radius', negate = TRUE)
+cols_without_Jdot = str_subset(colnames(feature_matrix_simple_30),'Jdot_radius', negate = TRUE)
+cols_without_J_Total = intersect(cols_without_J, cols_without_Jdot)
+feature_matrix_simple_30_without_J = feature_matrix_simple_30[,cols_without_J_Total]
+
+
+NAs_per_sample = rowSums((is.na(feature_matrix_simple_30_without_J)))
+table(NAs_per_sample)
+#    0   26  541 
+# 1163    9   14
+# Without J-statistic it is more consistent
+
+# 541 NAs is when a phenotype count has 0, expected outcome
+# 26 NAs is when a phenotype count has 1, expected outcome
+
+View(feature_matrix_simple_30_without_J)
+
+saveRDS(feature_matrix_simple_30_without_J,file = path.expand('~/Studie/Thesis - Local/Extracted_Features_1stJuly_Simple.RDS'))
 
 ```
 
