--- a/Example.Rmd
+++ b/Example.Rmd
@@ -85,16 +85,16 @@ plotter_alltypes = T
 plotter = list(plotter_sample, plotter_quadrat, plotter_alltypes)
 
 # Select spatial statistics, or NULL then all inbuild spatial statistics are selected
-selected_spatstat_statistics = list('K') # 'ALL', NULL, list('Gdot', 'K')
+selected_spatstat_statistics = NULL # 'ALL', NULL, list('Gdot', 'K')
 
 # debug
 
 extreme = file.path(base_path,'HO105-083_[16577,32382]_cell_seg_data.txt') # Ma= 95, Ot= 129, Tc= 1, Tu= 732
 extreme = file.path(base_path,'HO105-097_[9517,43652]_cell_seg_data.txt') # Ma= 37, Ot= 198, Tc= 0, Tu= 37
 extreme = file.path(base_path,'HO105-006_[13675,45799]_cell_seg_data.txt') # Ma= 12, Ot= 386, Tc= 2, Tu= 720
-extreme = file.path(base_path,'HO105-060_[19134,52452]_cell_seg_data.txt') # Ma= 21, Ot= 404, Tc= 3, Tu= 847
-extreme = file.path(base_path,'HO105-062_[11908,48533]_cell_seg_data.txt') # Ma= 7, Ot= 224, Tc= 4, Tu= 1360
-extreme = file.path(base_path,'HO105-101_[12806,43611]_cell_seg_data.txt') # Ma= 63, Ot= 405, Tc= 5, Tu= 1264
+# extreme = file.path(base_path,'HO105-060_[19134,52452]_cell_seg_data.txt') # Ma= 21, Ot= 404, Tc= 3, Tu= 847
+# extreme = file.path(base_path,'HO105-062_[11908,48533]_cell_seg_data.txt') # Ma= 7, Ot= 224, Tc= 4, Tu= 1360
+# extreme = file.path(base_path,'HO105-101_[12806,43611]_cell_seg_data.txt') # Ma= 63, Ot= 405, Tc= 5, Tu= 1264
 # extreme = c(extreme[3],D[8])
 
 # extreme = file.path(base_path, paste0(c(threes_names[1]),'_cell_seg_data.txt'))
@@ -111,8 +111,8 @@ for (file in extreme){
 }
 
 saveRDS(outputs_auto, file = 'feature_matrix_output.RDS')
-M = feature_extract(outputs = outputs_auto)
-write.csv(x = M,file = file.path(fig.prefix.simple, 'feature_matrix.csv'))
+# M = feature_extract(outputs = outputs_auto)
+# write.csv(x = M,file = file.path(fig.prefix.simple, 'feature_matrix.csv'))
 ```
 
 
@@ -130,7 +130,7 @@ base_path = path.expand("~/Studie/Thesis - Local/Data Marit voor Erik Bosch/Erik
 # define path for selected images by Marit
 image_check_path = NULL # working for Yongsoo (CHANGE)
 image_check_path <- 'C:/Users/erikb/Documents/Studie/Thesis - Local/spatstat_vectra/HO105 image check.xlsx' # working for Erik
-image_check_path <- path.expand('~/Studie/Thesis - Local/spatstat_vectra/HO105 image check.xlsx') # working for Erik
+image_check_path <- path.expand('~/Studie/Thesis - Local/spatstat_vectra/HO105 tumor_border annotation.xlsx') # working for Erik
 
 
 # all_files_x_ = rownames(base_path, pattern =  'HO105-',full.names = TRUE)
@@ -165,7 +165,7 @@ sample_names_marit_str = unlist(sample_names_marit)
 length(sample_names_marit_str)
 
 
-border_images_data_unfil = HO105_image_check$`Border images (% border)`
+border_images_data_unfil = HO105_image_check$`Border images`
 # get the MSI's through regex finding: open closed bracket->MSI numbers->comma->MSI numbers-> closed closed bracket
 border_images_unfil = str_extract_all(border_images_data_unfil,'\\[[0-9]+,[0-9]+\\]')
 # create filter to check for non empty content
